--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <main class="container mx-auto px-4 mt-12">
         <h1 class="text-4xl font-bold text-center text-gray-800 mb-4">About Me</h1>
         <p class="text-center text-gray-600 max-w-2xl mx-auto mb-12">
-            Hello! My name is Sofia Boada! I am a senior studying Computer Science at Boston University.
+            Hello! My name is Sofia Boada! I am a senior studying Computer Science at BU.
         </p>
         
         <!-- Content section with boxes and picture spaces -->
@@ -53,7 +53,7 @@
                 <div class="bg-white rounded-lg shadow-md p-6 h-64 flex flex-col justify-center">
                     <h2 class="text-2xl font-bold text-gray-800 mb-4">Food</h2>
                     <p class="text-gray-600">
-                        I love food! Sushi, Arepas, Pizza, Tacos, ANYTHING.
+                        I LOVE food! Sushi, Arepas, Pizza, Tacos, Mango, Yellow Curry, ANYTHING.
                     </p>
                 </div>
             </div>
