--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
     <main class="container mx-auto px-4 mt-12">
         <h1 class="text-4xl font-bold text-center text-gray-800 mb-4">About Me</h1>
-        <p class="text-center text-gray-600 max-w-2xl mx-auto mb-12">
+        <p class="text-center text-gray-600 text-xl max-w-2xl mx-auto mb-12">
             Hello! My name is Sofia Boada! I am a senior studying Computer Science at BU.
         </p>
         
