--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         body {
             font-family: 'Inter', sans-serif;
         }
-    </style>
+    </style> 
 </head>
 <body class="bg-blue-100">
     <!-- Header bar -->
@@ -53,7 +53,7 @@
                 <div class="bg-white rounded-lg shadow-md p-6 h-64 flex flex-col justify-center">
                     <h2 class="text-2xl font-bold text-gray-800 mb-4">Food</h2>
                     <p class="text-gray-600">
-                        I LOVE food! Sushi, Arepas, Pizza, Tacos, Mango, Yellow Curry, ANYTHING.
+                        One thing you should know about me is that I just LOVE food! Sushi, Arepas, Pizza, Tacos, Mango, Yellow Curry, ANYTHING.
                     </p>
                 </div>
             </div>
