--- a/index.html
+++ b/index.html
@@ -70,6 +70,18 @@
                     <p class="text-gray-500">Picture 3</p>
                 </div>
             </div>
+            <div class="md:w-1/2 space-y-8">
+                <div class="bg-gray-200 rounded-lg h-64 flex items-center justify-center">
+                    <img src="images/my-photo.jpg" alt="My Photo" class="w-full h-full object-cover rounded-lg">
+                </div>
+                <div class="bg-gray-200 rounded-lg h-64 flex items-center justify-center">
+                    <img src="https://example.com/another-photo.jpg" alt="Another Photo" class="w-full h-full object-cover rounded-lg">
+                </div>
+                <div class="bg-gray-200 rounded-lg h-64 flex items-center justify-center">
+                    <p class="text-gray-500">Picture 3</p>
+                </div>
+            </div>
+            
         </div>
     </main>
 
