--- a/index.html
+++ b/index.html
@@ -70,17 +70,12 @@
                     <p class="text-gray-500">Picture 3</p>
                 </div>
             </div>
-            <div class="md:w-1/2 space-y-8 grid grid-cols-3 gap-4">
-                <div class="bg-gray-200 rounded-lg h-64 flex items-center justify-center">
-                    <img src="images/san-francisco.jpg" alt="San Francisco" class="w-full h-full object-cover rounded-lg">
+            <div class="md:w-1/2 space-y-8">
+                <div class="flex space-x-4">
+                 <img alt="San Francisco skyline with the Golden Gate Bridge" class="w-1/3 h-64 object-cover rounded-lg" height="200" src="https://replicate.delivery/yhqm/6c9gU9PPaXICJ5WGbdyd3FEmprxVFcca1DEDrM5T14ueJ9tJA/out-0.png" width="200"/>
+                 <img alt="Denver cityscape with mountains in the background" class="w-1/3 h-64 object-cover rounded-lg" height="200" src="https://replicate.delivery/yhqm/NnHrVTM4KopDP5aupPCkYYEPf7jiwnxm9HsgOb0OCvM9J9tJA/out-0.png" width="200"/>
+                 <img alt="Bogota city view with Monserrate mountain" class="w-1/3 h-64 object-cover rounded-lg" height="200" src="https://replicate.delivery/yhqm/t84Apyhx2bKuB1MJd6wkQMRnuFnPjqNYvxipwdURhRleJ9tJA/out-0.png" width="200"/>
                 </div>
-                <div class="bg-gray-200 rounded-lg h-64 flex items-center justify-center">
-                    <img src="images/denver.jpg" alt="Denver" class="w-full h-full object-cover rounded-lg">
-                </div>
-                <div class="bg-gray-200 rounded-lg h-64 flex items-center justify-center">
-                    <img src="images/bogota.jpg" alt="Bogota" class="w-full h-full object-cover rounded-lg">
-                </div>
-            </div>
         </div>
     </main>
 
