--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
             </div>
             
             <!-- Right side picture spaces -->
+            <!--
             <div class="md:w-1/2 space-y-8">
                 <div class="bg-gray-200 rounded-lg h-64 flex items-center justify-center">
                     <p class="text-gray-500">Picture 1</p>
@@ -69,13 +70,19 @@
                 <div class="bg-gray-200 rounded-lg h-64 flex items-center justify-center">
                     <p class="text-gray-500">Picture 3</p>
                 </div>
-            </div>
+            </div>-->
+            
             <div class="md:w-1/2 space-y-8">
                 <div class="flex space-x-4">
-                 <img alt="San Francisco skyline with the Golden Gate Bridge" class="w-1/3 h-64 object-cover rounded-lg" height="200" src="https://replicate.delivery/yhqm/6c9gU9PPaXICJ5WGbdyd3FEmprxVFcca1DEDrM5T14ueJ9tJA/out-0.png" width="200"/>
-                 <img alt="Denver cityscape with mountains in the background" class="w-1/3 h-64 object-cover rounded-lg" height="200" src="https://replicate.delivery/yhqm/NnHrVTM4KopDP5aupPCkYYEPf7jiwnxm9HsgOb0OCvM9J9tJA/out-0.png" width="200"/>
-                 <img alt="Bogota city view with Monserrate mountain" class="w-1/3 h-64 object-cover rounded-lg" height="200" src="https://replicate.delivery/yhqm/t84Apyhx2bKuB1MJd6wkQMRnuFnPjqNYvxipwdURhRleJ9tJA/out-0.png" width="200"/>
+                 <img alt="San Francisco skyline with the Golden Gate Bridge" class="w-1/3 h-64 object-cover rounded-lg" src="https://replicate.delivery/yhqm/6c9gU9PPaXICJ5WGbdyd3FEmprxVFcca1DEDrM5T14ueJ9tJA/out-0.png"/>
+                 <img alt="Denver cityscape with mountains in the background" class="w-1/3 h-64 object-cover rounded-lg" src="https://replicate.delivery/yhqm/NnHrVTM4KopDP5aupPCkYYEPf7jiwnxm9HsgOb0OCvM9J9tJA/out-0.png"/>
+                 <img alt="Bogota city view with Monserrate mountain" class="w-1/3 h-64 object-cover rounded-lg" src="https://replicate.delivery/yhqm/t84Apyhx2bKuB1MJd6wkQMRnuFnPjqNYvxipwdURhRleJ9tJA/out-0.png"/>
                 </div>
+                <div class="flex space-x-4">
+                 <img alt="A skier gliding down a snowy mountain slope with a beautiful winter landscape in the background" class="w-1/3 h-64 object-cover rounded-lg" height="400" src="https://replicate.delivery/yhqm/7c3aPcnPHApJHNyro9B14WjfcSMe4wGHZfRlLKTpD5czu03mA/out-0.png" width="600"/>
+                 <img alt="A grand piano in a concert hall or studio, showcasing its elegant black finish and open lid" class="w-1/3 h-64 object-cover rounded-lg" height="400" src="https://replicate.delivery/yhqm/A9CH3RaIwmY6CNlAWhNXulhipPSbVZHwnfwlidrKzDMtL9tJA/out-0.png" width="600"/>
+                 <img alt="A well-maintained tennis court with white lines, net, and surrounding green area, ready for a match" class="w-1/3 h-64 object-cover rounded-lg" height="400" src="https://replicate.delivery/yhqm/OF9uRkZ88eV3VaEjXxOwDbz8S6touwJaxu141GkkbXCsL9tJA/out-0.png" width="600"/>
+            </div>
         </div>
     </main>
 
