--- a/index.html
+++ b/index.html
@@ -71,7 +71,16 @@
                     <p class="text-gray-500">Picture 3</p>
                 </div>
             </div>-->
-            
+            <!-- Image section next to Background -->
+            <div class="md:w-1/2 space-y-8">
+                <div class="flex space-x-4">
+                    <img src="images/san-francisco.png" alt="San Francisco" class="w-1/3 h-64 object-cover rounded-lg">
+                    <img src="images/denver.png" alt="Denver" class="w-1/3 h-64 object-cover rounded-lg">
+                    <img src="images/bogota.png" alt="Bogotá" class="w-1/3 h-64 object-cover rounded-lg">
+                </div>
+            </div>
+
+            <!--
             <div class="md:w-1/2 space-y-8">
                 <div class="flex space-x-4">
                  <img alt="San Francisco skyline with the Golden Gate Bridge" class="w-1/3 h-64 object-cover rounded-lg" src="https://replicate.delivery/yhqm/6c9gU9PPaXICJ5WGbdyd3FEmprxVFcca1DEDrM5T14ueJ9tJA/out-0.png"/>
@@ -82,7 +91,7 @@
                  <img alt="A skier gliding down a snowy mountain slope with a beautiful winter landscape in the background" class="w-1/3 h-64 object-cover rounded-lg" height="400" src="https://replicate.delivery/yhqm/7c3aPcnPHApJHNyro9B14WjfcSMe4wGHZfRlLKTpD5czu03mA/out-0.png" width="600"/>
                  <img alt="A grand piano in a concert hall or studio, showcasing its elegant black finish and open lid" class="w-1/3 h-64 object-cover rounded-lg" height="400" src="https://replicate.delivery/yhqm/A9CH3RaIwmY6CNlAWhNXulhipPSbVZHwnfwlidrKzDMtL9tJA/out-0.png" width="600"/>
                  <img alt="A well-maintained tennis court with white lines, net, and surrounding green area, ready for a match" class="w-1/3 h-64 object-cover rounded-lg" height="400" src="https://replicate.delivery/yhqm/OF9uRkZ88eV3VaEjXxOwDbz8S6touwJaxu141GkkbXCsL9tJA/out-0.png" width="600"/>
-            </div>
+            </div>-->
         </div>
     </main>
 
