--- a/index.html
+++ b/index.html
@@ -79,6 +79,13 @@
                     <img src="images/bogota.png" alt="Bogotá" class="w-1/3 h-64 object-cover rounded-lg">
                 </div>
             </div>
+            <div class="md:w-1/2 space-y-8">
+                <div class="flex space-x-4">
+                    <img src="images/tennis.png" alt="Tennis" class="w-1/3 h-64 object-cover rounded-lg">
+                    <img src="images/golf.png" alt="Golf" class="w-1/3 h-64 object-cover rounded-lg">
+                    <img src="images/ski.png" alt="Ski" class="w-1/3 h-64 object-cover rounded-lg">
+                </div>
+            </div>
 
             <!--
             <div class="md:w-1/2 space-y-8">
